train_test_split 함수 추가

--- a/Introduction to Machine Learning/Introduction.ipynb
+++ b/Introduction to Machine Learning/Introduction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Introduction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNrVL4psClkcg12kshlviBv",
+      "authorship_tag": "ABX9TyPY+oIbhXXws8/Jkwzbv7IB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {
         "id": "Ob4_GkNbqTD1"
       },
@@ -54,9 +54,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SQRE_WkSqyn7",
-        "outputId": "6734ea0c-feab-4cb5-ed0f-e96de168ea36"
+        "outputId": "ed060c18-138e-4623-d1a5-edbe2a3d683c"
       },
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -67,7 +67,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 2
         }
       ]
     },
@@ -82,9 +82,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i2DDjqPvrDVr",
-        "outputId": "dd4c3981-9ccd-432d-fc63-6abdd5566c39"
+        "outputId": "1eb22ef7-c738-4ff1-865d-48be712bb575"
       },
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,7 +97,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 3
         }
       ]
     },
@@ -113,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dH7KO1n5tAia",
-        "outputId": "db54abbf-554b-46e3-e9b4-c52935ab5149"
+        "outputId": "0c0bc419-4302-49ec-91d4-ecb549e88689"
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,9 +157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O68HGqBYtJ2Y",
-        "outputId": "a5bdd924-48c4-4289-d382-3a9e940cd647"
+        "outputId": "d570c8de-e52c-4ab8-fe33-a7ba3d00a9da"
       },
-      "execution_count": 34,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,12 +199,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 340
+          "height": 341
         },
         "id": "IEHFwc3et48J",
-        "outputId": "3f1cd932-a8bf-4f0f-ff37-c04d81330fe1"
+        "outputId": "71c5dc8a-6c7b-4a0b-8f68-7cd60da6db85"
       },
-      "execution_count": 36,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,11 +219,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7fbffe1f18d0>]"
+              "[<matplotlib.lines.Line2D at 0x7fe526204d10>]"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -263,12 +263,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 167
+          "height": 173
         },
         "id": "pBgJEtdZucFZ",
-        "outputId": "b919590f-383c-431a-fbfe-e90a53f2492d"
+        "outputId": "cb200cea-c8d3-48bb-8e47-e5771306f870"
       },
-      "execution_count": 41,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -282,7 +282,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2bf74aa2-b9d3-4ce4-b703-17aa9284f62a\">\n",
+              "  <div id=\"df-bf48db24-079c-4211-bcd5-ce42d68b8f75\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -335,7 +335,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2bf74aa2-b9d3-4ce4-b703-17aa9284f62a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf48db24-079c-4211-bcd5-ce42d68b8f75')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -386,12 +386,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2bf74aa2-b9d3-4ce4-b703-17aa9284f62a button.colab-df-convert');\n",
+              "          document.querySelector('#df-bf48db24-079c-4211-bcd5-ce42d68b8f75 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2bf74aa2-b9d3-4ce4-b703-17aa9284f62a');\n",
+              "          const element = document.querySelector('#df-bf48db24-079c-4211-bcd5-ce42d68b8f75');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -434,12 +434,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 260
+          "height": 268
         },
         "id": "gzseYoYfxSb5",
-        "outputId": "e7ecb40f-8643-4f62-a718-946ad703c54b"
+        "outputId": "8c33c8d6-fec2-4fbe-895f-4e6750b0b54b"
       },
-      "execution_count": 66,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -451,7 +451,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0550f3f8-c3d1-4247-9207-38ec5ef57964\">\n",
+              "  <div id=\"df-40850cc3-0bd3-4124-8756-2848fc6b0460\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -492,7 +492,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0550f3f8-c3d1-4247-9207-38ec5ef57964')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-40850cc3-0bd3-4124-8756-2848fc6b0460')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -543,12 +543,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0550f3f8-c3d1-4247-9207-38ec5ef57964 button.colab-df-convert');\n",
+              "          document.querySelector('#df-40850cc3-0bd3-4124-8756-2848fc6b0460 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0550f3f8-c3d1-4247-9207-38ec5ef57964');\n",
+              "          const element = document.querySelector('#df-40850cc3-0bd3-4124-8756-2848fc6b0460');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -582,7 +582,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-17680aed-e50b-469f-b3c2-9716005129a4\">\n",
+              "  <div id=\"df-2a3c6ef4-b2f8-4c0b-9db8-e80be803d7e3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -623,7 +623,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-17680aed-e50b-469f-b3c2-9716005129a4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2a3c6ef4-b2f8-4c0b-9db8-e80be803d7e3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -674,12 +674,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-17680aed-e50b-469f-b3c2-9716005129a4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2a3c6ef4-b2f8-4c0b-9db8-e80be803d7e3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-17680aed-e50b-469f-b3c2-9716005129a4');\n",
+              "          const element = document.querySelector('#df-2a3c6ef4-b2f8-4c0b-9db8-e80be803d7e3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -712,7 +712,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4e684476-a6b2-4d7d-99e2-4fbedf7cd283\">\n",
+              "  <div id=\"df-b92145c9-3872-4e95-9247-f41f0584666e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -747,7 +747,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4e684476-a6b2-4d7d-99e2-4fbedf7cd283')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b92145c9-3872-4e95-9247-f41f0584666e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -798,12 +798,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4e684476-a6b2-4d7d-99e2-4fbedf7cd283 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b92145c9-3872-4e95-9247-f41f0584666e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4e684476-a6b2-4d7d-99e2-4fbedf7cd283');\n",
+              "          const element = document.querySelector('#df-b92145c9-3872-4e95-9247-f41f0584666e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -859,12 +859,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 435
+          "height": 448
         },
         "id": "Jgc0vTH-yGdZ",
-        "outputId": "3780d34a-3121-4e61-ad82-3d908d0904fe"
+        "outputId": "283e7278-aa46-4df8-9e22-bf4527956991"
       },
-      "execution_count": 89,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +888,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-886c3081-2937-4f82-ae5a-708f30237960\">\n",
+              "  <div id=\"df-54f386ff-3f2b-488e-8f77-340129001922\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -953,7 +953,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-886c3081-2937-4f82-ae5a-708f30237960')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-54f386ff-3f2b-488e-8f77-340129001922')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1004,12 +1004,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-886c3081-2937-4f82-ae5a-708f30237960 button.colab-df-convert');\n",
+              "          document.querySelector('#df-54f386ff-3f2b-488e-8f77-340129001922 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-886c3081-2937-4f82-ae5a-708f30237960');\n",
+              "          const element = document.querySelector('#df-54f386ff-3f2b-488e-8f77-340129001922');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1046,7 +1046,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4b0ce6df-7e24-47ad-9a57-e17aa5cad6bb\">\n",
+              "  <div id=\"df-8acd3ef5-2113-47b0-a9d0-d23e0cad08a5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1093,7 +1093,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4b0ce6df-7e24-47ad-9a57-e17aa5cad6bb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8acd3ef5-2113-47b0-a9d0-d23e0cad08a5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1144,12 +1144,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4b0ce6df-7e24-47ad-9a57-e17aa5cad6bb button.colab-df-convert');\n",
+              "          document.querySelector('#df-8acd3ef5-2113-47b0-a9d0-d23e0cad08a5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4b0ce6df-7e24-47ad-9a57-e17aa5cad6bb');\n",
+              "          const element = document.querySelector('#df-8acd3ef5-2113-47b0-a9d0-d23e0cad08a5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1179,7 +1179,11 @@
       "cell_type": "markdown",
       "source": [
         "### Note 5.\n",
-        "43페이지~"
+        "훈련 데이터(train set) (75%)  \n",
+        "테스트 데이터(test set) (25%) 로 나누기  \n",
+        "**train_test_split**은 데이터를 무작위로 섞어줌  \n",
+        "parameter : data set, target set, **random_state=0 (항상 같은 결과로 섞음)**  \n",
+        "return    : X_train, X_test, y_train, y_test "
       ],
       "metadata": {
         "id": "M2_c0EJt9C_2"
@@ -1188,10 +1192,37 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split (\n",
+        "    iris_data, iris_target, random_state=0\n",
+        ")\n",
+        "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+      ],
+      "metadata": {
+        "id": "V-LHx2RC31B7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5a76dabe-1abe-4d65-8311-df74de8cbcda"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(112, 4) (38, 4) (112, 1) (38, 1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "V-LHx2RC31B7"
+        "id": "76mEb3bt9DNQ"
       },
       "execution_count": null,
       "outputs": []
