최소제곱법, 리지, 라쏘 추가

--- a/Introduction to Machine Learning/Supervised_Learning(1).ipynb
+++ b/Introduction to Machine Learning/Supervised_Learning(1).ipynb
@@ -6,7 +6,7 @@
       "name": "Supervised Learning(1).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPB0uEiKbIjpKfCbiQyg7Hj",
+      "authorship_tag": "ABX9TyPL2PzUarYnzE5jGi0elHj/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,9 +91,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yAsXBcHOSzzv",
-        "outputId": "af81ff81-a9b3-4762-ac22-1a65f86a1faa"
+        "outputId": "68d5fd68-728f-4a52-cd98-08aac98aa085"
       },
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,9 +125,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fsfCsOb8TB8F",
-        "outputId": "977b21e8-8dfb-4ab3-fafc-74f47129f9c8"
+        "outputId": "9558e5be-34ff-4651-81f8-b97ab2ce8b28"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -137,7 +137,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 3
         }
       ]
     },
@@ -155,9 +155,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2CLDxvKgWSA3",
-        "outputId": "10c82a3f-d2c6-49dd-bb8f-bae7d222b3f4"
+        "outputId": "58ef80e2-fbd4-4892-eb76-9ca1334c0c24"
       },
-      "execution_count": 64,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "mbcpjZdLXeMc"
       },
-      "execution_count": 65,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -192,9 +192,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kvU_AbdxXrM9",
-        "outputId": "7e642856-5b7f-4017-f3f7-18f3f241d987"
+        "outputId": "54765876-6e9c-4ab6-c9c5-a5243f8e7da2"
       },
-      "execution_count": 66,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 6
         }
       ]
     },
@@ -238,7 +238,7 @@
       "metadata": {
         "id": "KaT_hUBLZ648"
       },
-      "execution_count": 67,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -256,19 +256,19 @@
           "height": 298
         },
         "id": "yM96tjVgbvMQ",
-        "outputId": "0a4e3e6f-50e5-4f3e-a506-94df227894df"
+        "outputId": "45c410da-ee1f-4733-b2e0-c9ff40afec5b"
       },
-      "execution_count": 68,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7fc658003d50>"
+              "<matplotlib.legend.Legend at 0x7f8840ec6790>"
             ]
           },
           "metadata": {},
-          "execution_count": 68
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -320,9 +320,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jaf4uQceeuos",
-        "outputId": "6fbbb1e5-f226-4d10-a8d0-56ddbfb03fb4"
+        "outputId": "5dccda3a-9b3f-4bec-9aa0-654b20fcdb9a"
       },
-      "execution_count": 88,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 88
+          "execution_count": 9
         }
       ]
     },
@@ -359,9 +359,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0GPff8fdvFCH",
-        "outputId": "17c0d80f-9ca5-4b67-f0d3-f02fbcfb671a"
+        "outputId": "51c294fb-9061-449e-d8d5-31db67d27ebb"
       },
-      "execution_count": 89,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,12 +381,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
+          "height": 242
         },
         "id": "ibVbnYNNy_g1",
-        "outputId": "7a213f68-906b-4cf1-efe9-d9e7ed850787"
+        "outputId": "43e4a238-d907-4c13-f21d-4dacc33246da"
       },
-      "execution_count": 90,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +408,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5affe2cf-65bb-4274-b6ff-c2d413b374c3\">\n",
+              "  <div id=\"df-3a3e21db-f21e-4e7d-a1b8-ca40d59fd1f4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -509,7 +509,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5affe2cf-65bb-4274-b6ff-c2d413b374c3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3a3e21db-f21e-4e7d-a1b8-ca40d59fd1f4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -560,12 +560,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5affe2cf-65bb-4274-b6ff-c2d413b374c3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-3a3e21db-f21e-4e7d-a1b8-ca40d59fd1f4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5affe2cf-65bb-4274-b6ff-c2d413b374c3');\n",
+              "          const element = document.querySelector('#df-3a3e21db-f21e-4e7d-a1b8-ca40d59fd1f4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -588,14 +588,28 @@
             ]
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 11
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Note 2.\n",
+        "예측 결과가 굉장히 나쁨  \n",
+        "회귀에서 socre은   \n",
+        "$score = R^2 = 1- {{\\sum(y- 예측값)} \\over {\\sum(y- 평균)}} $  \n",
+        "(음수일 수도 있음)  \n",
+        "KNN에서 중요한 변수는 **거리 재는 법, 이웃의 수**  "
+      ],
+      "metadata": {
+        "id": "j2tMAfpv_clN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "reg = KNeighborsRegressor(n_neighbors=100)\n",
+        "reg = KNeighborsRegressor(n_neighbors=5)\n",
         "reg.fit(X_train, y_train)\n",
         "print(reg.score(X_train, y_train), reg.score(X_test, y_test))"
       ],
@@ -604,15 +618,103 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H63uH87TyS2b",
-        "outputId": "fb0a4845-3396-4bf8-ce82-5e55e9cbd9a4"
+        "outputId": "de1a46ac-5443-4718-bb62-e640a676a36f"
       },
-      "execution_count": 96,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.4137086943824244 0.3299465818615862\n"
+            "0.6238758317268587 0.18912404854026388\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Note 3.\n",
+        "회귀의 선형 모델  \n",
+        "$ \\hat y = w[0] \\times x[0] + ... + b $  \n",
+        "$x$는 특성, $w, b$는 모델이 학습하는 변수  \n",
+        "\n",
+        "**최소제곱법** (Ordinary Least Squares)  \n",
+        "\n",
+        "과대적합을 막기 위한 대안  \n",
+        "**리지** 회귀 (Ridge)  \n",
+        "**라쏘** 회귀 (Lasso)"
+      ],
+      "metadata": {
+        "id": "0Fy9daM6BOvw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "lrmodel = LinearRegression().fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "id": "ZM4sUGYJytIE"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(lrmodel.score(X_train, y_train), lrmodel.score(X_test, y_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gaHwZLECChIQ",
+        "outputId": "21f606ca-4dd6-45cd-9fcc-aad182953ed9"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.5190348343200994 0.48490866359057994\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import Ridge\n",
+        "ridgemodel = Ridge().fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "id": "RZS0GuLkDLNu"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(ridgemodel.score(X_train, y_train), ridgemodel.score(X_test, y_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4BaSHqbrEfhz",
+        "outputId": "4f38241e-d3e6-421a-de59-87c200aedea8"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.4273028097543281 0.4384009113704955\n"
           ]
         }
       ]
@@ -623,7 +725,7 @@
         ""
       ],
       "metadata": {
-        "id": "ZM4sUGYJytIE"
+        "id": "KdFo5uvkEu68"
       },
       "execution_count": null,
       "outputs": []
